<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="UseSwitchCompatOrMaterialXml">

   <EditText
       android:id="@+id/amount"
       android:layout_width="160dp"
       android:layout_height="wrap_content"
       android:inputType="numberDecimal"
       android:hint="@string/amount_in_naira"
       android:layout_marginTop="24dp"
       android:layout_marginStart="32dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       android:autofillHints="Amount" />

    <TextView
        android:id="@+id/nairainfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_bitcoin_in_naira"
        app:layout_constraintTop_toBottomOf="@id/amount"
        app:layout_constraintStart_toStartOf="@id/amount"/>

    <RadioGroup
        android:id="@+id/crypto_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/btc"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@id/amount"
        app:layout_constraintTop_toBottomOf="@id/nairainfo">

        <RadioButton
            android:id="@+id/btc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bitcoin"/>

        <RadioButton
            android:id="@+id/eth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etherum"/>

    </RadioGroup>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/crypto_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:checked="true"
        android:text="@string/round_up_amount"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/crypto_options"/>

    <Button
        android:id="@+id/btc_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        app:layout_constraintTop_toBottomOf="@id/crypto_switch"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/cryptoResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Conversion Amount"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/btc_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>